# anvil

./: AGENTS.md  index.html  package-lock.json  package.json
.anvil/: NAMING_UPDATES.md  PHASE_1_SUMMARY.md  PHASE_1_TASKS.md  PHASE_2_SUMMARY.md  PHASE_2_TASKS.md  PHASE_3_SUMMARY.md  PHASE_3_TASKS.md  PHASE_4_RESEARCH.md  PHASE_4_TASKS.md  PHASE_5_TASKS.md  PHASE_5_TESTING.md  PHASE_6_TASKS.md  PLAN.md  TASK_4.3_MANUAL_TESTING.md  TASK_5.12_PERMISSIONS_UI.md  architecture.md  rules.md  tech_specs.md
.opencode/: PHASE_1_SUMMARY.md  PHASE_1_TASKS.md  PHASE_2_TASKS.md  PHASE_3_TASKS.md  PHASE_4_TASKS.md  PHASE_5_TASKS.md  PHASE_6_TASKS.md  roadmap.md
DOCS/: MCP_INTEGRATIONS.md
src/: App.css  App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.anvil/: anvil.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  storage.rs  workflows.rs
src-tauri/src/adapters/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/adapters/tools/: bash.rs  files.rs  git.rs  glob.rs  list.rs  lsp.rs  mcp_tool.rs  mod.rs  patch.rs  question.rs  search.rs  skill.rs  symbols.rs  todo.rs  todoread.rs  web.rs
src-tauri/src/config/: manager.rs  mcp.rs  mod.rs  skills.rs  watcher.rs
src-tauri/src/domain/: agent.rs  context.rs  mod.rs  models.rs  orchestrator.rs  ports.rs
src-tauri/src/mcp/: client.rs  error.rs  integration_tests.rs  lifecycle.rs  mod.rs  transport.rs
src-tauri/src/terminal/: mod.rs
src/components/: ActivityCards.tsx  ActivityStream.tsx  Chat.tsx  ConfirmationModal.tsx  Editor.tsx  FileTree.tsx  QuestionModal.tsx  (+9 more)
(+39 files in other folders)
