[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
portable-pty = "0.9.0"
git2 = "0.20.3"
tree-sitter = "0.26.3"
async-trait = "0.1.89"
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
chrono = "0.4"
once_cell = "1.20"
ignore = "0.4.23"
dirs = "5.0"
grep = "0.3.2"
regex = "1.11.1"

# Phase 1: Tool Dependencies
glob = "0.3.1"
html2text = "0.12.6"
patch = "0.7.0"

[dev-dependencies]
tempfile = "3.10"

